# Nelder-web

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
NelderMeadSolver/: CMakeLists.txt
NelderMeadSolver/FunctionReader/: CMakeLists.txt  README.txt
NelderMeadSolver/FunctionReader/include/: algebra.h  definition.h  expression_parse.h  function.h  post_string_calculater.h  post_string_transfer.h
NelderMeadSolver/FunctionReader/src/: StringDecode.cpp  algebra.cpp  expression_parse.cpp  function.cpp  post_string_calculater.cpp  post_string_transfer.cpp
NelderMeadSolver/Points/include/: point.h
NelderMeadSolver/Points/src/: constructors.cpp  main.cpp  measure.cpp  operators.cpp
NelderMeadSolver/include/: solver.h
NelderMeadSolver/src/: playground.cpp  solver.cpp  solver_utils.cpp
PythonFrontend/: frontend.py
